# K12REG

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cli.py  config.py  config.toml.example  docker-compose.yml  go.mod  go.sum  pipeline.py  pyproject.toml  ts_solver.py
cmd/server/: main.go
export/: importer.py  sub2api.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  style.css  theme.ts  toast.ts  types.ts
internal/codexagent/: agent.go  agent_test.go
internal/config/: config.go
internal/httpx/: client.go
internal/importapi/: import.go  import_test.go
internal/mail/: acquire_from_end_test.go  acquire_spread_test.go  outlook.go  outlook_otp_test.go  seed_used_test.go  stats.go  stats_test.go
internal/pipeline/: pipeline.go
internal/pkce/: pkce.go
internal/register/: email_status_test.go  pkce_authorize_test.go  register.go
internal/sentinel/: sentinel.go
internal/storage/: accounts.go
internal/web/: auth.go  codex_agent.go  join_owner.go  mailpool.go  runner.go  scheduler.go  server.go  settings.go  tasklog.go
internal/workspace/: email_match_test.go  join.go  join_owner.go  session.go  session_test.go  token_probe_test.go
login/: login_flow.py
register/: browser_registrar.py  mail_provider.py  registrar.py  session.py
scripts/: codex_agent.py  docker-entrypoint.sh
utils/: log_style.py  logger.py  proxy.py  sentinel.py  session_auth.py  turnstile_local.py  yescaptcha.py
webapp/: __init__.py  runner.py  server.py
workspace/: joiner.py
(+19 files in other folders)
