[project]
name = "K12REG"
version = "0.1.0"
description = "ChatGPT 协议注册（curl_cffi）+ K12 母号加入 + Sub2API / 账号池导出"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
chatgpt-register = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["cli", "pipeline", "config", "version"]
packages = ["register", "utils", "workspace", "export", "login", "webapp"]
